Fine-tuned look of the google site

--- a/index.html
+++ b/index.html
@@ -2,18 +2,34 @@
 <html>
 <head>
     <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body id="body">
+    <header class="header">
+    <div id="navbar">
+        <a id="gmail-link" href="https://mail.google.com/mail/u/0/#inbox">Gmail</a>
+        <a id="images-link" href="https://www.google.com/imghp?hl=en&tab=ri&authuser=0&ogbl">Images</a>
+        <i id ="apps-icon" class="material-icons">apps</i>
+        <img id="profile-pic" src="https://lh3.googleusercontent.com/ogw/ADGmqu9x-m6POywdc3tupJ62gDqR9TZVWuMAz150Evmd1w=s64-c-mo" alt="profile pic">
+    </div>
+    </header>
     <div id="google-logo">
-        <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="The Google Logo">
+        <img id="google-logo-img" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="The Google Logo">
     </div>
     <div id="search-box">
         <div id="search-box-form">
             <form>
                 <label for="search"></label>
-                <input type="text" name="search" id="search-box">
+                <i id ="search-icon" class="material-icons">search</i>
+                <input type="search" name="search" id="search-box" placeholder="Search Google or type a URL">
+                <i id ="mic-icon" class="material-icons">mic</i>
             </form>
         </div>
+    </div>
+    <div>
+        <footer>
+            
+        </footer>
     </div>
 </body>
 
